--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <script src="./app/app.js"></script>
     <script src="./app/routes/login/login.js"></script>
     <script src="./app/routes/profile/profile.js"></script>
+    <script src="./app/routes/adminHome/adminHomeCtrl.js"></script>
+
     <script src="./app/services/authService.js"></script>
   </body>
 
