admin goes to adminHome, user goes to profile correctly

--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -1,5 +1,5 @@
 {{test}}
-The Admin is {{user.name}}
+we live at home {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
 <button type="button" ng-click="logout()">Logout</button>
