--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     <script src="./app/routes/login/login.js"></script>
     <script src="./app/routes/profile/profile.js"></script>
     <script src="./app/routes/adminHome/adminHomeCtrl.js"></script>
-
+    <script src="./app/routes/home/homeCtrl.js"></script>
     <script src="./app/services/authService.js"></script>
   </body>
 
