--- a/public/app/routes/login/login.html
+++ b/public/app/routes/login/login.html
@@ -10,7 +10,9 @@
 <br>
 <h1>REGISTER</h1>
 <form ng-submit="register(newUser)">
-  name: <input type="text" ng-model="newUser.name">
+  company name: <input type="text" ng-model="newUser.company">
+  <br>
+  admin name: <input type="text" ng-model="newUser.name">
   <br>
   email: <input type="email" ng-model="newUser.email">
   <br>
