add po button works on home view

--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -3,6 +3,6 @@ we live at home {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
 <input type="number"  placeholder="PO#" class="input-field input-po-position" ng-model="ponum"/>
-<a href="/" type="button" class="add-button a-add row-align" ng-click="addpo(ponum)">Add</a>
+<button type="button" ng-click="addpo(ponum)">Add</button>
 <br>
 <button type="button" ng-click="logout()">Logout</button>
