manageUser adding user susccessfully to users table. need to work on sql variables so they match

--- a/public/app/routes/adminHome/adminHome.html
+++ b/public/app/routes/adminHome/adminHome.html
@@ -5,6 +5,7 @@
 <h1>Make accordian Menu here</h1>
 <ul>
   <li><a href="">Search PO#</a></li>
+  <!-- <li><a ui-sref="manageUser">Make New User</a></li> -->
   <li><a ui-sref="manageUser">Make New User</a></li>
   <li><a href="">Delete PO#</a></li></li>
   <li><a href="">Edit User</a></li>
