--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,9 @@
     <script src="./app/routes/login/login.js"></script>
     <script src="./app/routes/adminHome/adminHomeCtrl.js"></script>
     <script src="./app/routes/home/homeCtrl.js"></script>
+    <script src="./app/routes/manage/manageUserCtrl.js"></script>
+
+    <script src="./app/routes/edit/editCtrl.js"></script>
     <script src="./app/routes/home/homeService.js"></script>
     <script src="./app/services/authService.js"></script>
   </body>
