removed edit view, and using manage instead. working on sql table

--- a/public/app/routes/manage/manageUser.html
+++ b/public/app/routes/manage/manageUser.html
@@ -2,6 +2,8 @@
 
   user name: <input type="text" ng-model="obj.name" required/>
   <br>
+  company: <input type="text" ng-model="obj.company" required/>
+  <br>
   email: <input type="email" ng-model="obj.email" required/>
   <br>
   password: <input type="password" ng-model="obj.password" required/>
