--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,10 @@
     <script src="./app/routes/adminHome/adminHomeCtrl.js"></script>
     <script src="./app/routes/home/homeCtrl.js"></script>
     <script src="./app/routes/manage/manageUserCtrl.js"></script>
-
-    <script src="./app/routes/edit/editCtrl.js"></script>
     <script src="./app/routes/home/homeService.js"></script>
-    <script src="./app/services/authService.js"></script>
+    <!--<script src="./app/services/mainService.js"></script>-->
+    <script src="./app/services/mainService.js"></script>
+
   </body>
 
 </html>
