--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -1,12 +1,14 @@
 
-we live at home {{user.name}}
+Welcome, {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
 <input type="number"  placeholder="PO#" class="input-field input-po-position" ng-model="ponum"/>
 <button type="button" ng-click="addpo(ponum)">Add</button>
 <br>
+
+
 <form name=search ng-submit="blanklogin(blankuser)">
-  <input type="text" placeholder="Search for PO#" ng-model="table_name.po_num">
+  <input type="text" placeholder="Search for PO#" ng-model="in_production.po_num">
   <button type="submit" name="button">Search</button>
 </form>
 <br>
