added search directive

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
     <script src="./app/routes/home/homeCtrl.js"></script>
     <script src="./app/routes/manage/manageUserCtrl.js"></script>
     <script src="./app/routes/home/homeService.js"></script>
-    <!--<script src="./app/services/mainService.js"></script>-->
     <script src="./app/services/mainService.js"></script>
+    <script src="./app/directives/search/searchDirective.js"></script>
+    <script src="./app/directives/search/searchCtrl.js"></script>
 
   </body>
 
