back to working

--- a/public/app/directives/search2/searchTmpl2.html
+++ b/public/app/directives/search2/searchTmpl2.html
@@ -7,9 +7,7 @@
 
 
 <form ng-submit="po_search(purchaseOrders)">
-  <input type="text" placeholder="test search for PO#" ng-model="purchaseOrders.poNum">
+  <input type="text" placeholder="test search for PO#" ng-model="purchaseOrders.po_num">
   <button type="submit" name="button">search</button>
   <br>
 </form>
-
-  <div ng-repeat="product in products">
