--- a/public/app/routes/manage/manageUser.html
+++ b/public/app/routes/manage/manageUser.html
@@ -2,7 +2,7 @@
 
   user name: <input type="text" ng-model="obj.name" required/>
   <br>
-  company: <input type="text" ng-model="obj.company" required/>
+  company: <input type="text" ng-model="obj.company" required/> (remember to remove unique contraint on table just for users, not for admins)
   <br>
   email: <input type="email" ng-model="obj.email" required/>
   <br>
