--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -24,10 +24,10 @@ FOUND: {{poNumber.po_num}}
 <input type="number"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
 <button type="button" ng-click="findpo(poNumber)">Find</button>
 <br>
-FOUND: {{mattFsesh.po_num}}
+FOUND: {{mattFsesh[0].po_num}}
 <br>
-{{mattFsesh.employee_id}}
-{{mattFsesh.checkpoint_id}}
+{{mattFsesh[0].employee_id}}
+{{mattFsesh[0].checkpoint_id}}
 
 <br>
 <br>
