--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <script src="./app/services/mainService.js"></script>
     <script src="./app/directives/search/searchDirective.js"></script>
     <script src="./app/directives/search/searchCtrl.js"></script>
+    <script src="./app/directives/search/searchService.js"></script>
 
   </body>
 
