--- a/public/app/routes/home/home.html
+++ b/public/app/routes/home/home.html
@@ -6,18 +6,7 @@ Welcome, {{user.name}}
 <input type="number"  placeholder="PO#" class="input-field input-po-position" ng-model="ponum"/>
 <button type="button" ng-click="addpo(ponum)">Add</button>
 <br>
-
-<!--matt french session -->
-<!-- search for po button -->
-<!-- <input type="number"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
-<button type="button" ng-click="findpo(poNumber)">Find</button>
-<br>
-FOUND: {{poInfo[0].po_num}}
-<br>
-{{poInfo[0].employee_id}}
-{{poInfo[0].checkpoint_id}}
-
-<br>
-<br> -->
+<!-- find po button -->
 <search-directive></search-directive>
+
 <button type="button" ng-click="logout()">Logout</button>
