--- a/public/app/routes/login/login.html
+++ b/public/app/routes/login/login.html
@@ -1,3 +1,4 @@
+<div class="test">
 <h1>LOGIN</h1>
 <form ng-submit="login(user)">
   email: <input type="email" ng-model="user.email">
@@ -8,6 +9,7 @@
 </form>
 <br><hr>
 <br>
+</div>
 <h1>REGISTER</h1>
 <form ng-submit="register(newUser)">
   company name: <input type="text" ng-model="newUser.company" required/>
