--- a/public/index.html
+++ b/public/index.html
@@ -15,22 +15,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
-    <script src="./app/app.js"></script>
-    <script src="./app/routes/login/login.js"></script>
+    <!-- <script src="./js/app.js"></script>
+    <script src="./js/login/login.js"></script>
 
-    <script src="./app/routes/adminHome/adminHomeCtrl.js"></script>
+    <script src="./js/adminHome/adminHomeCtrl.js"></script>
 
-    <script src="./app/routes/home/homeCtrl.js"></script>
-    <script src="./app/routes/home/homeService.js"></script>
+    <script src="./js/home/homeCtrl.js"></script>
+    <script src="./js/home/homeService.js"></script>
 
-    <script src="./app/routes/manage/manageUserCtrl.js"></script>
+    <script src="./js/manage/manageUserCtrl.js"></script>
 
-    <script src="./app/services/mainService.js"></script>
+    <script src="./js/main/mainService.js"></script>
 
-    <script src="./app/directives/search/searchCtrl.js"></script>
-    <script src="./app/directives/search/searchService.js"></script>
-    <script src="./app/directives/search/searchDirective.js"></script>
-
+    <script src="./js/directives/search/searchCtrl.js"></script>
+    <script src="./js/directives/search/searchService.js"></script>
+    <script src="./js/directives/search/searchDirective.js"></script> -->
+    <script src="./bundle.min.js"></script>
 
 
   </body>
