--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,8 @@
     <script src="./js/directives/search/searchCtrl.js"></script>
     <script src="./js/directives/search/searchService.js"></script>
     <script src="./js/directives/search/searchDirective.js"></script>
-<!-- <script src="bundle.min.js"></script> -->
+<!-- <script src="./bundle.min.js"></script>
+<script src="./bundle.min.css"></script> -->
 
   </body>
 
