--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
-    <!-- <script src="./js/app.js"></script>
+    <script src="./js/app.js"></script>
     <script src="./js/login/login.js"></script>
 
     <script src="./js/adminHome/adminHomeCtrl.js"></script>
@@ -29,9 +29,9 @@
 
     <script src="./js/directives/search/searchCtrl.js"></script>
     <script src="./js/directives/search/searchService.js"></script>
-    <script src="./js/directives/search/searchDirective.js"></script> -->
-    <script src="./bundle.min.js"></script>
-
+    <script src="./js/directives/search/searchDirective.js"></script>
+<!-- <script src="./bundle.min.js"></script>
+<script src="./bundle.min.css"></script> -->
 
   </body>
 
