--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- CSS -->
+    <!-- <link rel="stylesheet" href="./../styles/routes/_login.scss" media="screen" title="no title"> -->
+    <!-- <link rel="stylesheet" href="./styles/routes/login.scss" media="screen" title="no title"> -->
+    <link rel="stylesheet" href="./bundle.min.css" media="screen" title="no title">
+
     <title></title>
 
   </head>
@@ -30,8 +35,7 @@
     <script src="./js/directives/search/searchCtrl.js"></script>
     <script src="./js/directives/search/searchService.js"></script>
     <script src="./js/directives/search/searchDirective.js"></script>
-<!-- <script src="./bundle.min.js"></script>
-<script src="./bundle.min.css"></script> -->
+    <!-- <script src="./bundle.min.js"></script> -->
 
   </body>
 
