--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
-<html ng-app="app">
+<html ng-app="houndApp">
 
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- CSS -->
-    <!-- <link rel="stylesheet" href="./../styles/routes/_login.scss" media="screen" title="no title"> -->
-    <!-- <link rel="stylesheet" href="./styles/routes/login.scss" media="screen" title="no title"> -->
+    <!-- <link rel="stylesheet" href="./styles/routes/login.css" media="screen" title="no title"> -->
     <link rel="stylesheet" href="./bundle.min.css" media="screen" title="no title">
 
-    <title></title>
+
+    <title>Order Hound2</title>
 
   </head>
 
   <body>
 
     <ui-view></ui-view>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js'></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
 
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script>
     <script src="./js/login/login.js"></script>
 
     <script src="./js/adminHome/adminHomeCtrl.js"></script>
@@ -34,8 +34,9 @@
 
     <script src="./js/directives/search/searchCtrl.js"></script>
     <script src="./js/directives/search/searchService.js"></script>
-    <script src="./js/directives/search/searchDirective.js"></script>
-    <!-- <script src="./bundle.min.js"></script> -->
+    <script src="./js/directives/search/searchDirective.js"></script> -->
+
+    <script src="./bundle.min.js"></script>
 
   </body>
 
