--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -1,4 +1,4 @@
-<div class="test">
+<div class="test2">
   <h1>LOGIN</h1>
   <form ng-submit="login(user)">
     email: <input type="email" ng-model="user.email">
