gulp is gulpgin

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
     <script src="./js/directives/search/searchService.js"></script>
     <script src="./js/directives/search/searchDirective.js"></script> -->
 
+    <!-- <script src="./bundle.min.js"></script> -->
     <script src="./bundle.min.js"></script>
 
   </body>
