--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -1,15 +1,16 @@
-<div class="test2">
-  <h1>LOGIN</h1>
-  <form ng-submit="login(user)">
-    email: <input type="email" ng-model="user.email">
-    <br>
-    password: <input type="password" ng-model="user.password">
-    <br>
-    <button type="submit" name="button">login</button>
-  </form>
-  <br><hr>
+<main class="background">
+  <div class="testImage">
+<!-- ======================================================================= -->
+<!-- <h1>LOGIN</h1>
+<form ng-submit="login(user)">
+  email: <input type="email" ng-model="user.email">
   <br>
-</div>
+  password: <input type="password" ng-model="user.password">
+  <br>
+  <button type="submit" name="button">login</button>
+</form>
+<br><hr>
+<br>
 <h1>REGISTER</h1>
 <form ng-submit="register(newUser)">
   company name: <input type="text" ng-model="newUser.company" required/>
@@ -23,4 +24,6 @@
   photo: <input type="text" ng-model="newUser.photo">
   <br>
   <button type="submit" name="button">register</button>
-</form>
+</form> -->
+  </div>
+</main>
