--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -10,7 +10,11 @@
         <!-- </form> -->
       </header>
       <div class="container">
-        <div class="red"></div>
+
+        <div class="left">
+          <div class="title">Order Hound</div>
+          <div class="logo"></div>
+        </div>
         <div class="blue"></div>
       </div>
   <!-- ======================================================================= -->
