--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -3,10 +3,10 @@
     <div class="overlay">
       <header class="login">
         <!-- <form ng-submit="login(user)"> -->
-          <input type="email" placeholder="Email" class="input" ng-model="user.email">
-          <input type="password" placeholder="Password" class="input" ng-model="user.password">
+          <input type="email" placeholder="Email" class="header-input" ng-model="user.email">
+          <input type="password" placeholder="Password" class="header-input" ng-model="user.password">
           <!-- <button type="submit" name="button">login</button> -->
-          <input type="submit" value="Login" class="button" ng-click="login(user)">
+          <input type="submit" value="Login" class="header-button" ng-click="login(user)">
         <!-- </form> -->
       </header>
       <div class="container">
@@ -14,8 +14,31 @@
         <div class="left">
           <div class="title">Order Hound</div>
           <div class="logo"></div>
+          <div class="description">
+            Easily track and
+            <p>find orders throughout
+            <p>your manufacturing process
+          </div>
         </div>
-        <div class="blue"></div>
+        <div class="right">
+          <div class="register">
+            <div class="right-title">Register your business</div>
+
+            <form ng-submit="register(newUser)">
+              <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
+              <br>
+              <input type="text" placeholder="Admin name" ng-model="newUser.name" required/>
+              <br>
+              <input type="email" placeholder="Admin email" ng-model="newUser.email" required/>
+              <br>
+              <input type="password" placeholder="New password" ng-model="newUser.password" required/>
+              <br>
+              <input type="text" placeholder="Profile photo (optional)" ng-model="newUser.photo">
+              <br>
+              <button type="submit" name="button">Create Account</button>
+            </form>
+        </div>
+
       </div>
   <!-- ======================================================================= -->
   <!-- <h1>LOGIN</h1>
