--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -9,9 +9,40 @@
           <input type="submit" value="Login" class="header-button" ng-click="login(user)">
         <!-- </form> -->
       </header>
-      <div class="container">
+      <!-- <div class="container"> -->
+<!-- ======================================================================= -->
+  <div class="container">
+    <div class="block">
+      <div class="title-logo-box">
+        <div class="title">Order Hound</div>
+          <div class="logo"></div>
+            <div class="description-box">
+              <div class="description">
+                Easily find orders in your production line.
+              </div>
+            </div>  
+      </div>
+    </div>
 
-        <div class="left">
+    <div class="block">
+      <div class="right-title">Register your business</div>
+      <form ng-submit="register(newUser)">
+        <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
+        <br>
+        <input type="text" placeholder="Admin name" ng-model="newUser.name" required/>
+        <br>
+        <input type="email" placeholder="Admin email" ng-model="newUser.email" required/>
+        <br>
+        <input type="password" placeholder="New password" ng-model="newUser.password" required/>
+        <br>
+        <input type="text" placeholder="Profile photo (optional)" ng-model="newUser.photo">
+        <br>
+        <button type="submit" name="button">Create Account</button>
+      </form>
+    </div>
+  </div>
+
+        <!-- <div class="left">
           <div class="title">Order Hound</div>
           <div class="logo"></div>
           <div class="description">
@@ -20,7 +51,6 @@
             <p>your manufacturing process
           </div>
         </div>
-        <div class="right">
           <div class="register">
             <div class="right-title">Register your business</div>
 
@@ -37,9 +67,8 @@
               <br>
               <button type="submit" name="button">Create Account</button>
             </form>
-        </div>
+          </div> -->
 
-      </div>
   <!-- ======================================================================= -->
   <!-- <h1>LOGIN</h1>
   <form ng-submit="login(user)">
@@ -65,6 +94,8 @@
     <br>
     <button type="submit" name="button">register</button>
   </form> -->
+    <!-- </div> -->
+
     </div>
   </main>
 </div>
