login layout clean up

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -19,6 +19,8 @@
                 </div>
           </div>
         </div>
+<!-- ================== DIVIDER ==================-->
+        <div class="block" style="width: 190px; margin: 30px;"></div>
 <!-- =================== RIGHT ===================-->
         <div class="block">
           <div class="right-title">Register your business</div>
