login layout clean up

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -20,10 +20,10 @@
           </div>
         </div>
 <!-- ================== DIVIDER ==================-->
-        <div class="block" style="width: 190px; margin: 30px;"></div>
+        <div class="block" style="width: 160px; margin: 30px;"></div>
 <!-- =================== RIGHT ===================-->
-        <div class="block">
-          <div class="right-title">Register your business</div>
+        <div class="block" style="width: auto">
+          <div class="right-title";>Register your business</div>
             <form ng-submit="register(newUser)">
               <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
               <br>
