set up header directive

--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -1,12 +1,21 @@
 
+<header-directive></header-directive>
+
+
+
+<!--
 Welcome, {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
+-->
 <!-- addPO button -->
+<!--
 <input type="number"  placeholder="PO#" class="input-field input-po-position" ng-model="ponum"/>
 <button type="button" ng-click="addpo(ponum)">Add</button>
-<br>
+<br> -->
 <!-- find po button -->
+<!--
 <search-directive></search-directive>
 
 <button type="button" ng-click="logout()">Logout</button>
+-->
