--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -1,4 +1,6 @@
+<header-directive></header-directive>
 
+<div class="danny">try again</div>
 Welcome, {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
