user photo double binding works

--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,3 +1,5 @@
+<header-directive></header-directive>
+
 <a href=""></a>The Admin is {{user.name}}
 <br>
 <img src="{{user.photo}}"  alt= "user photo"/><br>
