--- a/public/routes/directives/headerTmpl.html
+++ b/public/routes/directives/headerTmpl.html
@@ -1,8 +1,25 @@
-<div class="george">doh!
-  welcome, {{user.name}}
-</div>
 <header class="header">
-  <div class="welcome">Welcome, {{user.name}}</div>
+
+
+  <div class="bo">
+  <ul>
+    <li>
+      <div class="welcome">Welcome
+        <div class="user-photo">
+          <img src={{user.photo}} alt="user photo"/>
+        </div>
+        {{user.name}}!
+        <br>
+      </div>
+    </li>
+    <li>
+      <div class="chelsea">
+      checkpoint: {{user.checkpoint}}
+      </div>
+    </li>
+  </ul>  
+</div>
+  <!-- <div class="checkpoint">checkpoint: {{user.checkpoint}}</div> -->
 </header>
 <!-- <div class="user-photo" src="{{user.photo}}"></div> -->
-<img class="user-photo" src="{{user.photo}}"  alt= "user photo"/>
+<!-- <img src="{{user.photo}}"  alt= "user photo"/> -->
