--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@
   </head>
 
   <body>
+
     <ui-view></ui-view>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.js'></script>
 
-<!--
-    <script src="./js/app.js"></script>
+
+    <!-- <script src="./js/app.js"></script>
     <script src="./js/login/login.js"></script>
 
     <script src="./js/adminHome/adminHomeCtrl.js"></script>
@@ -33,9 +34,9 @@
 
     <script src="./js/directives/search/searchCtrl.js"></script>
     <script src="./js/directives/search/searchService.js"></script>
-
     <script src="./js/directives/search/searchDirective.js"></script> -->
 
+    <!-- <script src="./bundle.min.js"></script> -->
     <script src="./bundle.min.js"></script>
 
   </body>
