finished header directive

--- a/public/routes/directives/headerTmpl.html
+++ b/public/routes/directives/headerTmpl.html
@@ -1,7 +1,7 @@
 <header class="header">
 
 
-  <div class="bo">
+  <div class="container">
   <ul>
     <li>
       <div class="welcome">Welcome
@@ -13,12 +13,15 @@
       </div>
     </li>
     <li>
-      <div class="chelsea">
+      <div class="break">
       checkpoint: {{user.checkpoint}}
       </div>
     </li>
   </ul>
 </div>
+<!-- <div class="logout"> -->
+  <button type="button" class="logout-button" ng-click="logout()">Logout</button>
+<!-- </div> -->
   <!-- <div class="checkpoint">checkpoint: {{user.checkpoint}}</div> -->
 </header>
 <!-- <div class="user-photo" src="{{user.photo}}"></div> -->
