--- a/public/routes/directives/searchTmpl.html
+++ b/public/routes/directives/searchTmpl.html
@@ -1,4 +1,4 @@
-<input type="number"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
+<input type="text"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
 <button type="button" ng-click="findpo(poNumber)">Find</button>
 <br>
 FOUND: {{poInfo[0].po_num}}
