positioned add input/button

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <!-- CSS -->
     <!-- <link rel="stylesheet" href="./styles/routes/login.css" media="screen" title="no title"> -->
     <link rel="stylesheet" href="./bundle.min.css" media="screen" title="no title">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
     <title>Order Hound2</title>
 
