--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -5,16 +5,16 @@
       <!-- addPO button -->
         <div class="input-container">
           <input type="text"  placeholder="Add PO#" ng-model="ponum"/>
-          <button type="button" class="button" style="height: 100%;" ng-click="addpo(ponum)">Add&#32;<i class="material-icons">add_circle</i></button>
+          <button type="button" class="button" style="height: 100%;" ng-click="addpo(ponum)">Add<i class="material-icons">add_circle</i></button>
           <br>
         </div>
     </div>
     <!-- find po button -->
-    <div class="center-container" style="background-color: black; height: 300px;">
+    <div class="center-container" style="height: 200px;">
       <button class="accordion">Find PO</button>
         <div class="panel">
           <input type="text"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
-          <button type="button" class="button" ng-click="findpo(poNumber)">Find&#32;<i class="material-icons" style="font-size: 28px">search</i></button>
+          <button type="button" class="button" ng-click="findpo(poNumber)">Find<i class="material-icons" style="font-size:32px;">search</i></button>
         </div>
     </div>
     FOUND: {{poInfo[0].po_num}}
