--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -34,13 +34,16 @@
     </div>
     <div class="modal-content">
       <div class="modal-header">
-        <h2>Please login or create an account</h2>
+        <h2>PO# {{poInfo[0].po_num}} is at {{poInfo[0].checkpoint_id}} checkpoint with user {{poInfo[0].employee_id}}.</h2>
+        <br>
+        {{poInfo[0].date}}
       </div>
       <div class="modal-body">
-        FOUND: {{poInfo[0].po_num}}
+        {{poInfo[0].employee_photo}}
         <br>
         {{poInfo[0].employee_id}}
         {{poInfo[0].checkpoint_id}}
+
       </div>
     </div>
 </div>
