employee_photo shows in modal

--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -39,7 +39,9 @@
         {{poInfo[0].date}}
       </div>
       <div class="modal-body">
-        {{poInfo[0].employee_photo}}
+        <div class="employee-photo">
+          <img src={{poInfo[0].employee_photo}} alt="user photo"/>
+        </div>
         <br>
         {{poInfo[0].employee_id}}
         {{poInfo[0].checkpoint_id}}
