added notes to clarify code

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -33,7 +33,7 @@
               <br>
               <input type="password" placeholder="New password" ng-model="newUser.password" required/>
               <br>
-              <input type="text" placeholder="Profile photo (optional)" ng-model="newUser.photo">
+              <input type="text" placeholder="Profile photo URL (optional)" ng-model="newUser.photo">
               <br>
               <button type="submit" name="button">Create Account</button>
             </form>
