adminHome for admins only

--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,5 +1,22 @@
-<header-directive></header-directive>
+<div class="cat">
+  <header-directive></header-directive>
+    <div class="center-container">
+      <!-- <button class="accordion">Section 1</button>
+        <div class="panel1">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
 
+      <button class="accordion">Section 2</button>
+        <div class="panel2">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+
+      <button class="accordion">Section 3</button>
+        <div class="panel2">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+
+    </div> -->
 <a href=""></a>The Admin is {{user.name}}
 <br>
 
@@ -13,3 +30,5 @@
   <li><a href="">Edit User</a></li>
 </ul>
 <button type="button" ng-click="logout()">Logout</button>
+
+</div>
