--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -1,4 +1,4 @@
-<div class="cat">
+<div class="cat"><!-- <<< scss in headerDirective.scss -->
 <header-directive></header-directive>
     <div class="center-container">
       <div class="title bottom-line">Add PO</div>
