starting accordion menu adminHome

--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,23 +1,22 @@
 <div class="cat">
   <header-directive></header-directive>
-    <div class="center-container">
-      <!-- <button class="accordion">Section 1</button>
-        <div class="panel1">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
+  <h2>Animated Accordion</h2>
+<p>Click on the buttons to open the collapsible content.</p>
 
-      <button class="accordion">Section 2</button>
-        <div class="panel2">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
+<button class="accordion">Section 1</button>
+<div class="panel">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
 
-      <button class="accordion">Section 3</button>
-        <div class="panel2">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-        </div>
+<button class="accordion">Section 2</button>
+<div class="panel">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
 
-    </div> -->
-<a href=""></a>The Admin is {{user.name}}
+<button class="accordion">Section 3</button>
+<div class="panel">
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+</div>
 <br>
 
 
@@ -31,4 +30,6 @@
 </ul>
 <button type="button" ng-click="logout()">Logout</button>
 
+</div>
+<!-- cat div -->
 </div>
