--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,23 +1,26 @@
 <div class="cat">
   <header-directive></header-directive>
+  <section class="center-container">
   <h2>Animated Accordion</h2>
 <p>Click on the buttons to open the collapsible content.</p>
 
-<button class="accordion">Section 1</button>
-<div class="panel">
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+<div class="butt admin-accordion">Section 1</div>
+<div class="panel1">
+  <input type="text"  placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber"/>
+  <button type="button" class="button" ng-click="findpo(poNumber); showModal=!showModal">Find<i class="material-icons" style="font-size:32px;">search</i></button>
 </div>
 
-<button class="accordion">Section 2</button>
-<div class="panel">
+<div class="butt admin-accordion">Section 2</div>
+<!-- <div class="panel2">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-</div>
+</div> -->
 
-<button class="accordion">Section 3</button>
-<div class="panel">
+<div class="butt admin-accordion">Section 3</div>
+<div class="panel2">
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 </div>
 <br>
+</section>
 
 
 <h1>Make accordian Menu here</h1>
