assigned colors to accordion

--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,4 +1,4 @@
-<div class="cat" style="background-color: #616161;">
+<div class="cat" style="background-color: $blue;">
   <header-directive></header-directive>
   <section class="center-container">
 
