--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -16,6 +16,32 @@
     <div class="panel2">
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-  </section>
 
+  </section>
+  <div class="modal-bg" ng-show="showModal">
+    <!-- MODAL CONTENTS -->
+    <div>
+      <div class="close-container">
+        <div class="x-box" ng-click="showModal=!showModal">
+          <span class="right"></span>
+          <span class="left"></span>
+        </div>
+      </div>
+      <div class="modal-content">
+        <div class="modal-body">
+          <div class="photo-container">
+            <div class="employee-photo">
+              <img src={{poInfo[0].employee_photo}} alt="user photo" />
+            </div>
+          </div>
+          <div>
+            PO# {{poInfo[0].po_num}}
+            <br> User: {{poInfo[0].employee_id}}
+            <br> Checkpoint: {{poInfo[0].checkpoint_id}}
+            <br> Date: {{poInfo[0].date}}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
