--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -3,14 +3,14 @@
   <header-directive></header-directive>
   <div class="center-container">
     <div class="title bottom-line">Add PO</div>
-    <!-- addPO button -->
+    <!-- add PO button -->
     <div class="input-container">
       <input type="text" placeholder="Add PO#" ng-model="ponum" />
       <button type="button" class="button" style="height: 100%;" ng-click="addpo(ponum)">Add<i class="material-icons">add_circle</i></button>
       <br>
     </div>
   </div>
-  <!-- find po button -->
+  <!-- find PO button -->
   <div class="center-container" style="height: 200px;">
     <button class="accordion">Find PO</button>
     <div class="panel">
