--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -20,9 +20,9 @@
           </div>
         </div>
 <!-- ================== DIVIDER ==================-->
-        <div class="block" style="width: 160px; margin: 30px;"></div>
+        <div class="divider-block"></div>
 <!-- =================== RIGHT ===================-->
-        <div class="block" style="width: auto">
+        <div class="block" style="width: auto; margin-left: 20px;">
           <div class="right-title";>Register your business</div>
             <form ng-submit="register(newUser)">
               <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
