--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -7,39 +7,81 @@
           <input type="submit" value="Login" class="header-button" ng-click="login(user)">
       </header>
 <!-- =================== LEFT ===================-->
-      <div class="container">
-        <div class="block">
-          <div class="title-logo-box">
-            <div class="title">Order Hound</div>
-              <div class="logo"></div>
-                <div class="description-box">
-                  <div class="description">
-                    Easily find orders in your production line.
+      <section id="horizontal">
+        <div class="container">
+          <div class="block-left">
+            <div class="title-logo-box">
+              <div class="title">Order Hound</div>
+                <div class="logo"></div>
+                  <div class="description-box">
+                    <div class="description">
+                      Easily find orders in your production line.
+                    </div>
                   </div>
-                </div>
+            </div>
+          </div>
+        <!-- </div> -->
+  <!-- ================== DIVIDER ==================-->
+          <div class="divider-block"></div>
+  <!-- =================== RIGHT ===================-->
+        <!-- <div class="container"> -->
+          <div class="block-right">
+            <div class="right-title";>Register your business</div>
+              <form ng-submit="register(newUser)">
+                <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
+                <br>
+                <input type="text" placeholder="Admin name" ng-model="newUser.name" required/>
+                <br>
+                <input type="email" placeholder="Admin email" ng-model="newUser.email" required/>
+                <br>
+                <input type="password" placeholder="New password" ng-model="newUser.password" required/>
+                <br>
+                <input type="text" placeholder="Profile photo URL (optional)" ng-model="newUser.photo">
+                <br>
+                <button type="submit" name="button">Create Account</button>
+              </form>
           </div>
         </div>
-<!-- ================== DIVIDER ==================-->
-        <div class="divider-block"></div>
-<!-- =================== RIGHT ===================-->
-        <div class="block" style="width: auto; margin-left: 20px;">
-          <div class="right-title";>Register your business</div>
-            <form ng-submit="register(newUser)">
-              <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
-              <br>
-              <input type="text" placeholder="Admin name" ng-model="newUser.name" required/>
-              <br>
-              <input type="email" placeholder="Admin email" ng-model="newUser.email" required/>
-              <br>
-              <input type="password" placeholder="New password" ng-model="newUser.password" required/>
-              <br>
-              <input type="text" placeholder="Profile photo URL (optional)" ng-model="newUser.photo">
-              <br>
-              <button type="submit" name="button">Create Account</button>
-            </form>
-        </div>
+      </section>
+  <!-- ======================================================================================================-->
+      <section id="vertical">
+        <!-- =================== LEFT ===================-->
+              <div class="container">
+                <div class="block-left">
+                  <div class="title-logo-box">
+                    <div class="title">Order Hound</div>
+                      <div class="logo"></div>
+                        <div class="description-box">
+                          <div class="description">
+                            Easily find orders in your production line.
+                          </div>
+                        </div>
+                  </div>
+                </div>
+              </div>
+        <!-- =================== RIGHT ===================-->
+              <div class="container">
+                <div class="block-right">
+                  <div class="right-title";>Register your business</div>
+                    <form ng-submit="register(newUser)">
+                      <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
+                      <br>
+                      <input type="text" placeholder="Admin name" ng-model="newUser.name" required/>
+                      <br>
+                      <input type="email" placeholder="Admin email" ng-model="newUser.email" required/>
+                      <br>
+                      <input type="password" placeholder="New password" ng-model="newUser.password" required/>
+                      <br>
+                      <input type="text" placeholder="Profile photo URL (optional)" ng-model="newUser.photo">
+                      <br>
+                      <button type="submit" name="button">Create Account</button>
+                    </form>
+                </div>
+              </div>
+      </section>
 
-      </div>
+
+
 
     </div>
   </main>
