--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -60,7 +60,9 @@
                 </div>
               </div>
         <!-- =================== RIGHT ===================-->
+
               <div class="container">
+                <div class="background2">
                 <div class="block-right">
                   <div class="right-title";>Register your business</div>
                     <form ng-submit="register(newUser)">
@@ -78,6 +80,7 @@
                     </form>
                 </div>
               </div>
+            </div>
       </section>
 
 
