working on login layout

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -46,6 +46,7 @@
   <!-- ======================================================================================================-->
       <section id="vertical">
         <!-- =================== LEFT ===================-->
+
               <div class="container">
                 <div class="block-left">
                   <div class="title-logo-box">
@@ -60,11 +61,10 @@
                 </div>
               </div>
         <!-- =================== RIGHT ===================-->
+              <div class="container2">
 
-              <div class="container">
-                <div class="background2">
                 <div class="block-right">
-                  <div class="right-title";>Register your business</div>
+                  <div class="right-title">Register your business</div>
                     <form ng-submit="register(newUser)">
                       <input type="text" placeholder="Company name" ng-model="newUser.company" required/>
                       <br>
@@ -80,7 +80,7 @@
                     </form>
                 </div>
               </div>
-            </div>
+
       </section>
 
 
