added register links

--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -41,8 +41,10 @@
                 <button type="submit" name="button">Create Account</button>
               </form>
           </div>
-        </div>
+        <!-- </div> -->
+
       </section>
+      <div class="bottom-links">Learn More</div>
   <!-- ======================================================================================================-->
       <section id="vertical">
         <!-- =================== LEFT ===================-->
@@ -60,6 +62,11 @@
                   </div>
                 </div>
               </div>
+              <div class="bottom-links-vert">Register
+                <br>
+                <i class="material-icons">arrow_drop_down_circle</i>
+              </div>
+
         <!-- =================== RIGHT ===================-->
               <div class="container2">
 
@@ -80,7 +87,6 @@
                     </form>
                 </div>
               </div>
-
       </section>
 
 
