--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -61,6 +61,11 @@
                         </div>
                   </div>
                 </div>
+                <div class="login-vert">
+                  <input type="email" placeholder="Email" ng-model="user.email">
+                  <input type="password" placeholder="Password" ng-model="user.password">
+                  <input type="submit" value="Login" class="header-button" ng-click="login(user)">
+                </div>
               </div>
               <div class="bottom-links-vert">Register
                 <br>
