--- a/public/routes/home.html
+++ b/public/routes/home.html
@@ -14,7 +14,7 @@
   <!-- find PO button -->
   <div class="center-container" style="height: 200px;">
     <button class="accordion">Find PO</button>
-    <div class="panel" style="max-height: 57px;">
+    <div class="panel">
       <input type="text" placeholder="Find PO#" class="input-field input-po-position" ng-model="poNumber" />
       <button type="button" class="button" ng-click="findpo(poNumber); showModal=!showModal">Find<i class="material-icons" style="font-size:32px;">search</i></button>
     </div>
