--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div>
-            PO# {{poInfo[0].po_num}}
+            <b>PO#</b> {{poInfo[0].po_num}}
             <br> User: {{poInfo[0].employee_id}}
             <br> Checkpoint: {{poInfo[0].checkpoint_id}}
             <br> Date: {{poInfo[0].date}}
