manageUser logs out started input layout

--- a/public/routes/adminHome.html
+++ b/public/routes/adminHome.html
@@ -1,5 +1,5 @@
+<!-- <<< scss for center-of-everything in headerDirective.scss -->
 <div class="center-of-everything">
-  <!-- <<< scss in headerDirective.scss -->
   <header-directive></header-directive>
   <section class="center-container">
     <div class="butt admin-accordion">Find PO</div>
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div>
-            <b>PO#</b> {{poInfo[0].po_num}}
+            PO# {{poInfo[0].po_num}}
             <br> User: {{poInfo[0].employee_id}}
             <br> Checkpoint: {{poInfo[0].checkpoint_id}}
             <br> Date: {{poInfo[0].date}}
