--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -1,20 +1,25 @@
-<h1>Make New User</h1>
+<div class="center-of-manageUsers">
+  <header-directive></header-directive>
 
-  user name: <input type="text" ng-model="obj.name" required/>
-  <br>
-  company: <input type="text" ng-model="obj.company" required/> (remember to remove unique contraint on table just for users, not for admins)
-  <br>
-  email: <input type="email" ng-model="obj.email" required/>
-  <br>
-  password: <input type="password" ng-model="obj.password" required/>
-  <br>
-  checkpoint: <input type="text" ng-model="obj.checkpoint" required/>
-  <br>
-  photo: <input type="text" ng-model="obj.photo">
-  <br>
-  Make Admin: <input type="checkbox" ng-model="obj.admin"/>
-  <br>
-  <a href="/" type="button" ng-click="getter(obj)">Make User</a>
-</form>
-<br>
-<br>
+    <h1>Make New User</h1>
+    <section class="input-container">
+      <div class="make-user-container">
+        <br><input type="text" placeholder="User Name" ng-model="obj.name" required/>
+        <!-- (remember to remove unique contraint on table just for users, not for admins) -->
+        <br><input type="email" placeholder="Email" ng-model="obj.email" required/>
+        <br><input type="text" placeholder="Company" ng-model="obj.company" required/>
+      </div>
+      <div class="make-user-container">
+        <br><input type="password" placeholder="Password" ng-model="obj.password" required/>
+        <br><input type="text" placeholder="Checkpoint" ng-model="obj.checkpoint" required/>
+        <br><input type="text" placeholder="User Photo URL (optional)" ng-model="obj.photo">
+        <br> Make Admin: <input type="checkbox" ng-model="obj.admin"/>
+      </div>
+    </section>  
+    <br>
+    <a href="/" type="button" ng-click="getter(obj)">Make User</a>
+    </form>
+    <br>
+    <br>
+
+</div>
