re-sized make admin button

--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -14,7 +14,7 @@
         <br><input id="input-margins" type="text" placeholder="Checkpoint" ng-model="obj.checkpoint" required/>
         <br><input id="input-margins" type="text" placeholder="User Photo URL (optional)" ng-model="obj.photo">
         <br>
-        <div class="check-box-div">Make Admin: <input type="checkbox" ng-model="obj.admin"/></div>
+        <div class="checkbox-div">Make Admin: <input class="checkbox-position" type="checkbox" ng-model="obj.admin"/></div>
       </div>
     </section>
     <br>
