fixed create user button for manageUser

--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -18,7 +18,7 @@
       </div>
     </section>
     <br>
-    <div class="make-user-button" type="submit" name="button" ng-click="getter(obj)">Create User</button>
+    <button type="submit" name="button" ng-click="getter(obj)">Create User</button>
     </form>
     <br>
     <br>
