iphone media query create user

--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -18,9 +18,12 @@
       </div>
     </section>
     <br>
-    <button type="submit" name="button" ng-click="getter(obj)">Create User</button>
+    <!-- <button type="submit" name="button" ng-click="getter(obj)">Create User</button> -->
     </form>
     <br>
     <br>
 
+
+  <div class="create-user-button" type="submit" name="button" ng-click="getter(obj)">Create User</div>
 </div>
+  <div class="create-user-button2" type="submit" name="button" ng-click="getter(obj)">Create User</div>
