all alerts now sweet alerts

--- a/public/routes/manageUser.html
+++ b/public/routes/manageUser.html
@@ -26,4 +26,4 @@
 
   <div class="create-user-button" type="submit" name="button" ng-click="getter(obj)">Create User<i class="material-icons" style="font-size:32px;">account_circle</i></div>
 </div>
-  <div class="create-user-button2" type="submit" name="button" ng-click="getter(obj)">Create User</div>
+  <div class="create-user-button2" type="submit" name="button" ng-click="getter(obj)">Create User<i class="material-icons" style="font-size:32px;">account_circle</i></div>
