--- a/public/routes/login.html
+++ b/public/routes/login.html
@@ -44,8 +44,12 @@
         <!-- </div> -->
 
       </section>
-      <div class="bottom-links">Learn More</div>
+      <a href="#goto">Jump</a>
+
   <!-- ======================================================================================================-->
+<h2 id="goto">Header</h2>
+  <!-- ======================================================================================================-->
+
       <section id="vertical">
         <!-- =================== LEFT ===================-->
 
